--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-lineto": "^3.2.0",
     "react-scripts": "3.3.1",
     "vertical-timeline-component-for-react": "^1.0.6"
   },
